Web navigation tweaks - Footer spacing fix

--- a/components/_patterns/02-molecules/02-menu/_footer-nav.scss
+++ b/components/_patterns/02-molecules/02-menu/_footer-nav.scss
@@ -4,7 +4,10 @@
   &__menu {
     padding: 0;
     margin: 2em 0 0;
-
+    @media only screen
+    and (max-width: 980px) {
+      margin-bottom: 2em;
+    }
     &--item {
       display: inline-block;
 
